--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -1,4 +1,6 @@
+<link rel='stylesheet' type='text/css' href='${cdn}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' media='screen' />
 <link rel='stylesheet' type='text/css' href='${cdn}bootstrap-markdown/2.5.0/css/bootstrap-markdown.min.css?v3.0.3' media='screen' />
+<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/article.css?v3' media='screen' />
 <form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'><b>博客标题</b></label>
