--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -212,10 +212,24 @@ a {
 			}
 		}
 		.comment-right {
-			line-height: 54px;
+			line-height: 20px;
+			font-size: 12px;
 			margin-left: 60px;
+			.content {
+				padding-top: 7px;
+			}
+			.opt {
+				span {
+					a {
+						color: rgb(153, 102, 0);
+						&:hover {
+							text-decoration: underline;
+						}
+					}
+					margin-right: 5px
+				}
+			}
 			div {
-				padding-left: 5px;
 				/*background-color: #f1f1f1;
 				border-radius: 4px;*/
 			}
