--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 					</div>#end
-					<div style='clear:both'>
+					<div class='clearfix' id='comment'>
 						<!-- 多说评论框 start -->
 						<div class='ds-thread' data-thread-key='$article._id' data-title='$article.Title' data-url='http://www.foreworld.net/archive/${article._id}.html'></div>
 						<!-- 多说评论框 end -->
