--- a/blog/views/pagelet/Side.Comment.vm.html
+++ b/blog/views/pagelet/Side.Comment.vm.html
@@ -17,7 +17,7 @@
 						</a>
 					</div>
 					<div class='opt'>
-						<span><a href='$comment.Author_Url' target='_blank'>$comment.Author</a></span>
+						<span><a href='http://duoshuo.com/profile/$comment.Author_Id/' target='_blank'>$comment.Author</a></span>
 						<span>发布于 #toSDate($comment.PostTime)</span>
 					</div>
 				</div>
