--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -53,7 +53,7 @@
 	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>关注</h3>
+			<h3 class='panel-title'>文章分类</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -62,7 +62,16 @@
 	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>粉丝</h3>
+			<h3 class='panel-title'>热门文章</h3>
+		</div>
+		<div class='panel-body'>
+			<ul class='list-group'>
+			</ul>
+		</div>
+	</div>
+	<div class='panel panel-default olx-panel'>
+		<div class='panel-heading'>
+			<h3 class='panel-title'>最新评论</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -76,27 +85,27 @@
 		<div class='panel-body'>
 			<ul class='list-group'>
 				<li class='list-group-item'>
-					<span class='badge'>1</span>
+					<span class='badge'>0</span>
 					<a href='javascript:;'>
 						<div>今日访问 (查看最新访客)</div></a>
 				</li>
 				<li class='list-group-item'>
-					<span class='badge'>32</span>
+					<span class='badge'>0</span>
 					<a href='javascript:;'>
 						<div>昨日访问</div></a>
 				</li>
 				<li class='list-group-item'>
-					<span class='badge'>10</span>
+					<span class='badge'>0</span>
 					<a href='javascript:;'>
 						<div>本周访问</div></a>
 				</li>
 				<li class='list-group-item'>
-					<span class='badge'>30</span>
+					<span class='badge'>0</span>
 					<a href='javascript:;'>
 						<div>本月访问</div></a>
 				</li>
 				<li class='list-group-item'>
-					<span class='badge'>121</span>
+					<span class='badge'>0</span>
 					<a href='javascript:;'>
 						<div>所有访问</div></a>
 				</li>
