--- a/blog/views/user/Sidebar2.html
+++ b/blog/views/user/Sidebar2.html
@@ -1,7 +1,16 @@
 <div class='col-sm-12 col-md-3'>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>我的收藏夹</h3>
+			<h3 class='panel-title'>常用链接</h3>
+		</div>
+		<div class='panel-body'>
+			<ul class='list-group'>
+			</ul>
+		</div>
+	</div>
+	<div class='panel panel-default olx-panel'>
+		<div class='panel-heading'>
+			<h3 class='panel-title'>友情链接</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
