--- a/blog/views/pagelet/UsefulLinks.vm.html
+++ b/blog/views/pagelet/UsefulLinks.vm.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class='panel-body'>
 		<div class='list-group'>
-			#foreach($link in $links)<a class='list-group-item' target='_blank' href='$link.LinkUrl' title='$link.author.Nickname #formatDate($link.PostTime)'>$link.LinkName</a>
+			#foreach($link in $links)<a class='list-group-item' target='_blank' href='$link.LinkUrl' title='创建于 #formatDate($link.PostTime)'>$link.LinkName</a>
 			#end</div>
 	</div>
 </div>
