--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -51,7 +51,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class='panel panel-default olx-panel'>
+	#*<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
 			<h3 class='panel-title'>文章分类</h3>
 		</div>
@@ -59,7 +59,7 @@
 			<ul class='list-group'>
 			</ul>
 		</div>
-	</div>
+	</div>*#
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
 			<h3 class='panel-title'>热门文章</h3>
@@ -74,12 +74,30 @@
 			</ul>
 		</div>
 	</div>
-	<div class='panel panel-default olx-panel'>
+	<div class='panel panel-default olx-panel olx-panel-comment'>
 		<div class='panel-heading'>
 			<h3 class='panel-title'>最新评论</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
+				#foreach($comment in $newCmt)<li class='list-group-item clearfix'>
+					<div class='comment-left'>
+						<div>
+							<img src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'>
+						</div>
+					</div>
+					<div class='comment-right'>
+						<div class='content'>
+							<a href='${virtualPath}archive/${comment.Article_Id}.html#comment' title='发布于 #formatDate($comment.PostTime)'>
+								<div>$comment.Content</div>
+							</a>
+						</div>
+						<div class='opt'>
+							<span><a href='http://duoshuo.com/profile/$comment.Author_Id/' target='_blank'>$comment.Author</a></span>
+							<span>发布于 #toSDate($comment.PostTime)</span>
+						</div>
+					</div>
+				</li>#end
 			</ul>
 		</div>
 	</div>
