--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -36,7 +36,7 @@
 	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>常用操作</h3>
+			<h3 class='panel-title glyphicon glyphicon-cog'>&#8201;常用操作</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -62,7 +62,7 @@
 	</div>*#
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>热门文章</h3>
+			<h3 class='panel-title glyphicon glyphicon-fire'>&#8201;热门文章</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -76,7 +76,7 @@
 	</div>
 	<div class='panel panel-default olx-panel olx-panel-comment'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>最新评论</h3>
+			<h3 class='panel-title glyphicon glyphicon-comment'>&#8201;最新评论</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -88,7 +88,7 @@
 					</div>
 					<div class='comment-right'>
 						<div class='content'>
-							<a href='${virtualPath}archive/${comment.Article_Id}.html#comment' title='发布于 #formatDate($comment.PostTime)'>
+							<a target='_blank' href='${virtualPath}archive/${comment.Article_Id}.html#comment' title='发布于 #formatDate($comment.PostTime)'>
 								<div>$comment.Content</div>
 							</a>
 						</div>
@@ -103,7 +103,7 @@
 	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>访客统计</h3>
+			<h3 class='panel-title glyphicon glyphicon-stats'>&#8201;访客统计</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
