--- a/blog/views/user/Sidebar2.html
+++ b/blog/views/user/Sidebar2.html
@@ -1,7 +1,7 @@
 <div class='col-sm-12 col-md-3'>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>常用链接</h3>
+			<h3 class='panel-title glyphicon glyphicon-link'>&#8201;常用链接</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
@@ -14,7 +14,7 @@
 	</div>
 	<div class='panel panel-default olx-panel'>
 		<div class='panel-heading'>
-			<h3 class='panel-title'>友情链接</h3>
+			<h3 class='panel-title glyphicon glyphicon-heart-empty'>&#8201;友情链接</h3>
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
