--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -14,7 +14,7 @@
 						<div>修改个人资料</div></a>
 				</li>
 				<li class='list-group-item'>
-					<a href='javascript:;'>
+					<a href='../edit/pw'>
 						<div>修改登录密码</div></a>
 				</li>
 				<li class='list-group-item'>
@@ -58,8 +58,8 @@
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
-				<li class='list-group-item active'>
-					<a href='javascript:;'>
+				<li class='list-group-item'>
+					<a href='../new/blog'>
 						<div>发表博文</div></a>
 				</li>
 				<li class='list-group-item'>
