--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -3,25 +3,25 @@
 <link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/article.css?v3' media='screen' />
 <form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Title'><b>博客标题</b></label>
+		<label class='col-sm-12' for='blogFrm_Title'>博客标题</label>
 		<div class='col-sm-12'>
 			<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'#if(!!$article) value='$article.Title'#end>
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Photo'><b>博客图片</b></label>
+		<label class='col-sm-12' for='blogFrm_Photo'>博客图片</label>
 		<div class='col-sm-12'>
 			<input type='text' class='form-control' name='Photo' id='blogFrm_Photo' placeholder='http://'#if(!!$article) value='$article.Photo'#end>
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Intro'><b>博客摘要</b></label>
+		<label class='col-sm-12' for='blogFrm_Intro'>博客摘要</label>
 		<div class='col-sm-12'>
 			<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro' placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'>#if(!!$article)$article.Intro#end</textarea>
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Content'><b>博客正文</b></label>
+		<label class='col-sm-12' for='blogFrm_Content'>博客正文</label>
 		<div class='col-sm-12'>
 			<!-- 加载编辑器的容器 -->
 			#*<script id='blogFrm_Content' name='Content' type='text/plain'>#if(!!$article)$article.Content#end</script>*#
@@ -29,13 +29,13 @@
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Tags'><b>标签</b></label>
+		<label class='col-sm-12' for='blogFrm_Tags'>标签</label>
 		<div class='col-sm-12'>
 			<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'#if(!!$article) value='$article.Tags'#end>
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Cate'><b>系统博客分类？</b></label>
+		<label class='col-sm-12' for='blogFrm_Cate'>系统博客分类？</label>
 		<div class='col-sm-12 fontSize'>
 			<select class='form-control' id='blogFrm_Cate' name='Cate'>
 				#foreach($category in $categorys)<option value='$category.CateName'#if(!!$article && $article.Cate==$category.CateName) selected#end>$category.CateName</option>
@@ -44,38 +44,38 @@
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12'><b>文章类型？</b></label>
+		<label class='col-sm-12'>文章类型？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='radio' name='ArtiType' checked> 原创
 			<input type='radio' name='ArtiType'> 转帖
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_IsPrivacy'><b>是否对所有人可见？</b></label>
+		<label class='col-sm-12' for='blogFrm_IsPrivacy'>是否对所有人可见？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='checkbox' name='IsPrivacy' id='blogFrm_IsPrivacy' checked> 可见
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_IsComment'><b>是否允许评论？</b></label>
+		<label class='col-sm-12' for='blogFrm_IsComment'>是否允许评论？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='checkbox' name='IsComment' id='blogFrm_IsComment' checked> 允许评论
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12'><b>是否自动生成目录？</b></label>
+		<label class='col-sm-12'>是否自动生成目录？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='checkbox'> 生成目录
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Topmark'><b>是否在博客列表置顶？</b></label>
+		<label class='col-sm-12' for='blogFrm_Topmark'>是否在博客列表置顶？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='checkbox' name='Topmark' id='blogFrm_Topmark' value='1'#if(!!$article && 1 == $article.Topmark) checked#end> 置顶
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_Bookmark'><b>是否设置滚动书签？</b></label>
+		<label class='col-sm-12' for='blogFrm_Bookmark'>是否设置滚动书签？</label>
 		<div class='col-sm-12 fontSize'>
 			<input type='checkbox' name='Bookmark' id='blogFrm_Bookmark' value='1'#if(!!$article && 1 == $article.Bookmark) checked#end> 滚动
 		</div>
