--- a/blog/views/pagelet/IndexHeader.html
+++ b/blog/views/pagelet/IndexHeader.html
@@ -2,8 +2,8 @@
 <meta charset='utf-8' />
 <meta name='robots' content='all' />
 <meta name='author' content='3203317@qq.com,新' />
-<meta name='Copyright' content='Foreworld.Net CopyRight 2014' />
-<meta name='description' content='http://www.foreworld.net/,$description' />
+<meta name='copyright' content='Foreworld.Net copyright 2014' />
+<meta name='description' content='http://www.foreworld.net/,洪荒$description' />
 <meta name='keywords' content='http://www.foreworld.net/$keywords' />
 <meta name='generator' content='Foreworld' />
 <meta http-equiv='content-type' content='text/html;charset=utf-8' />
