--- a/blog/views/user/admin/ChangePW.html
+++ b/blog/views/user/admin/ChangePW.html
@@ -21,21 +21,21 @@
 							</ol>
 							<form class='form-horizontal' id='chpwdFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 								<div class='form-group'>
-									<label class='col-sm-4 control-label' for='chpwdFrm_OPwd'>旧的登录密码</label>
+									<label class='col-sm-4 control-label' for='chpwdFrm_OldPass'>旧的登录密码</label>
 									<div class='col-sm-4'>
-										<input type='password' class='form-control' name='OPwd' id='chpwdFrm_OPwd' placeholder='旧的登录密码'>
+										<input type='password' class='form-control' name='OldPass' id='chpwdFrm_OldPass' placeholder='旧的登录密码'>
 									</div>
 								</div>
 								<div class='form-group'>
-									<label class='col-sm-4 control-label' for='chpwdFrm_Pwd'>新密码</label>
+									<label class='col-sm-4 control-label' for='chpwdFrm_NewPass'>新密码</label>
 									<div class='col-sm-4'>
-										<input type='password' class='form-control' name='Pwd' id='chpwdFrm_Pwd' placeholder='新密码'>
+										<input type='password' class='form-control' name='NewPass' id='chpwdFrm_NewPass' placeholder='新密码'>
 									</div>
 								</div>
 								<div class='form-group'>
-									<label class='col-sm-4 control-label' for='chpwdFrm_Pwd2'>再次输入新密码</label>
+									<label class='col-sm-4 control-label' for='chpwdFrm_NewPass2'>再次输入新密码</label>
 									<div class='col-sm-4'>
-										<input type='password' class='form-control' name='Pwd2' id='chpwdFrm_Pwd2' placeholder='再次输入新密码'>
+										<input type='password' class='form-control' id='chpwdFrm_NewPass2' placeholder='再次输入新密码'>
 									</div>
 								</div>
 								<div class='form-group'>
