--- a/blog/public/manage/css/index.less
+++ b/blog/public/manage/css/index.less
@@ -3,7 +3,14 @@
 }
 
 #accordion {
-	a {
-		font-size:12px;
+	.panel-heading {
+		a {
+			font-size: 14px;
+		}
+	}
+	.panel-body {
+		a {
+			font-size:12px;
+		}
 	}
 }
