--- a/blog/views/manage/Index.html
+++ b/blog/views/manage/Index.html
@@ -10,32 +10,9 @@
 		<div class='container'>
 			<div class='row'>
 				<div class='col-sm-12 col-md-2'>
-					<div class='panel-group' id='accordion'>
-						<div class='panel panel-default'>
-							<div class='panel-heading'>
-								<h4 class='panel-title'>
-									<a data-toggle='collapse' data-parent='#accordion' href='#collapseSys'>系统管理</a>
-								</h4>
-							</div>
-							<div id='collapseSys' class='panel-collapse collapse'>
-								<div class='panel-body'>
-									<p><a href='javascript:;'>用户管理</a></p>
-								</div>
-							</div>
-						</div>
-						<div class='panel panel-default'>
-							<div class='panel-heading'>
-								<h4 class='panel-title'>
-									<a data-toggle='collapse' data-parent='#accordion' href='#collapseBlog'>博客管理</a>
-								</h4>
-							</div>
-							<div id='collapseBlog' class='panel-collapse collapse in'>
-								<div class='panel-body'>
-									<p><a href='javascript:;'>文章分类</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
+					#parse('manage/pagelet/Side.Nav.html')
+				</div>
+				<div class='col-sm-12 col-md-10'>
 				</div>
 			</div>
 		</div>
