--- a/blog/views/manage/article/category/Index.html
+++ b/blog/views/manage/article/category/Index.html
@@ -38,6 +38,7 @@
 								<button id='btn_del' class='btn btn-danger glyphicon glyphicon-remove-sign'>删除</button>
 							</div>
 						</div>
+						#parse('manage/article/category/List.html')
 					</div>
 				</div>
 			</div>
