--- a/blog/public/manage/css/index.less
+++ b/blog/public/manage/css/index.less
@@ -6,6 +6,12 @@
 	text-align: center;
 }
 
+form {
+	.olx-form-required {
+		color: red;
+	}
+}
+
 #accordion {
 	.panel-heading {
 		a {
@@ -17,4 +23,8 @@
 			font-size:12px;
 		}
 	}
+}
+
+.table {
+	font-size: 12px;
 }
