--- a/blog/views/manage/article/category/Index.html
+++ b/blog/views/manage/article/category/Index.html
@@ -2,6 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
+	    <link rel='stylesheet' type='text/css' href='${cdn}bootstrap-datetimepicker/2.2.0/css/bootstrap-datetimepicker.min.css' media='screen'>
 		<link rel='stylesheet' type='text/css' href='${virtualPath}public/manage/css/index.css?v3' media='screen' />
 	</head>
 	<body>
@@ -43,6 +44,69 @@
 				</div>
 			</div>
 		</div>
+		<div id='addModal' class='modal fade' aria-hidden='true' aria-labelledby='addModalLabel' role='dialog' tabindex='-1'>
+			<div class='modal-dialog'>
+				<div class='modal-content'>
+					<div class='modal-header'>
+						<button class='close' aria-hidden='true' data-dismiss='modal' type='button'>×</button>
+						<h4 id='addModalLabel' class='modal-title'><b>新增</b></h4>
+					</div>
+					<form id='addFrm' data-olx-type='olx.form' class='form-horizontal' role='form' data-url='add'>
+						<div class='modal-body'>
+							<div class='form-group'>
+								<label for='addFrm_CateName' class='col-sm-3 control-label'><span class='olx-form-required'>*</span>分类名称</label>
+								<div class='col-sm-7'>
+									<input type='text' data-olx-type='olx.form.input' data-required='true' class='form-control' id='addFrm_CateName' name='CateName' placeholder='分类名称' data-placement='bottom' data-original-title='请输入正确的格式。' autofocus>
+								</div>
+							</div>
+							<div class='form-group'>
+								<label for='addFrm_Intro' class='col-sm-3 control-label'>分类描述</label>
+								<div class='col-sm-7'>
+									<input type='text' data-olx-type='olx.form.input' class='form-control' id='addFrm_Intro' name='Intro' placeholder='分类描述'>
+								</div>
+							</div>
+							<div class='form-group'>
+								<label for='addFrm_Sort' class='col-sm-3 control-label'>排序</label>
+								<div class='col-sm-7'>
+									<input type='text' data-olx-type='olx.form.input' class='form-control' id='addFrm_Sort' name='Sort' placeholder='排序' value='1'>
+								</div>
+							</div>
+							<div class='form-group'>
+								<label for='addFrm_shadow_PostTime' class='col-sm-3 control-label'>创建时间</label>
+								<div class='col-sm-7'>
+									<div class='input-group date form_date col-md-12' data-date='' data-date-format='yyyy/mm/dd' data-link-field='addFrm_PostTime' data-link-format='yyyy/mm/dd'>
+										<input class='form-control' id='addFrm_shadow_PostTime' type='text' value='' readonly placeholder='创建时间'>
+										<span class='input-group-addon'><span class='glyphicon glyphicon-remove'></span></span>
+										<span class='input-group-addon'><span class='glyphicon glyphicon-calendar'></span></span>
+									</div>
+									<input type='hidden' data-olx-type='olx.form.input' class='form-control' id='addFrm_PostTime' name='CreateTime' placeholder='创建时间'>
+								</div>
+							</div>
+						</div>
+						<div class='modal-footer'>
+							<button class='btn btn-default' data-dismiss='modal' type='button'>关闭</button>
+							<button class='btn btn-warning' type='reset'>重置</button>
+							<button id='addFrm_btn_submit' class='btn btn-primary' type='button'>保存</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 		#parse('pagelet/IndexJs.html')
+		<script type='text/javascript' src='${cdn}bootstrap-datetimepicker/2.2.0/js/bootstrap-datetimepicker.js' charset='UTF-8'></script>
+		<script type='text/javascript' src='${cdn}bootstrap-datetimepicker/2.2.0/js/locales/bootstrap-datetimepicker.zh-CN.js' charset='UTF-8'></script>
+		<script type='text/javascript'>
+		$('.form_date').datetimepicker({
+			format: 'yyyy-mm-dd hh:ii:ss',
+			language: 'zh-CN',
+			weekStart: 1,
+			todayBtn: 1,
+			autoclose: 1,
+			todayHighlight: 1,
+			startView: 2,
+			minView: 2,
+			forceParse: 0
+		});
+		</script>
 	</body>
 </html>
