--- a/blog/views/manage/article/category/Index.html
+++ b/blog/views/manage/article/category/Index.html
@@ -205,6 +205,12 @@
 		$('#btn_del').click(function(){
 			$('#delConfirmModal').modal();
 		});
+		$('#addFrm_btn_submit').click(function(){
+			$('#addFrm').olxForm('submit', [function(){}, null, function (data){
+				if(300 === data.code) return top.location.href = '/manager/login';
+				console.log(arguments)
+			}]);
+		});
 		</script>
 	</body>
 </html>
