--- a/blog/views/manage/pagelet/TopBanner.html
+++ b/blog/views/manage/pagelet/TopBanner.html
@@ -13,6 +13,12 @@
 			<ul class='nav navbar-nav'>
 			</ul>
 			<ul class='nav navbar-nav navbar-right'>
+				<li class='dropdown active'>
+					<a href='javascript:;' class='dropdown-toggle' data-toggle='dropdown'>配置 <b class='caret'></b></a>
+					<ul class='dropdown-menu'>
+						<li><a href='/manager/changePw'>修改密码</a></li>
+					</ul>
+				</li>
 				<li class='active'><a href='${virtualPath}manager/logout'>退出</a></li>
 			</ul>
 			<form id='topSearchFrm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form' onsubmit='return false;'>
