--- a/blog/views/manager/ChangePwd.html
+++ b/blog/views/manager/ChangePwd.html
@@ -18,7 +18,7 @@
 							<ol class='breadcrumb'>
 								<li>
 									<i class='fa fa-home fa-fw'></i>
-									<a href='javascript:;'>后台</a></li>
+									<a href='javascript:;'>系统管理</a></li>
 								<li class='active'>配置</li>
 								<li class='active'>修改密码</li>
 							</ol>
