--- a/blog/views/user/Login.html
+++ b/blog/views/user/Login.html
@@ -61,7 +61,7 @@
 										<div class='col-sm-offset-3 col-sm-4'>
 											<button id='btn_log' type='button' class='btn btn-primary'>立即登陆</button>
 										</div>
-										<label class='col-sm-5 control-label'><a href='/user/reset/password'>忘记登陆密码？</a></label>
+										<label class='col-sm-5 control-label'><a href='${virtualPath}user/reset/password'>忘记登陆密码？</a></label>
 									</div>
 								</form>
 			                </div>
