--- a/blog/views/manager/ChangePwd.html
+++ b/blog/views/manager/ChangePwd.html
@@ -12,7 +12,7 @@
 				<div class='col-sm-12 col-md-2'>
 					#parse('manage/pagelet/Side.Nav.html')
 				</div>
-				<div class='col-sm-12 col-md-10'>					
+				<div class='col-sm-12 col-md-10'>
 					<div class='panel panel-default'>
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
@@ -22,7 +22,7 @@
 								<li class='active'>配置</li>
 								<li class='active'>修改密码</li>
 							</ol>
-							<form class='form-horizontal' id='chpwdFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
+							<form class='form-horizontal' id='chpwdFrm' role='form' onsubmit='return false;' data-url='pw'>
 								<div class='form-group'>
 									<label class='col-sm-4 hidden-xs control-label' for='chpwdFrm_OldPass'>旧的登录密码</label>
 									<div class='col-sm-4'>
