--- a/blog/views/manager/Login.html
+++ b/blog/views/manager/Login.html
@@ -29,7 +29,7 @@
 				<button type='button' class='close' data-dismiss='alert'>&times;</button>
 				<strong>提示：</strong><span id='alert_msg'>请按要求输入正确的格式内容。</span>
 			</div>
-			<form id='loginFrm' role='form' onsubmit='return false;'>
+			<form id='loginFrm' role='form' onsubmit='return false;' data-url='login'>
 				<h3>后台登陆</h3>
 				<div class='form-group'>
 					<input id='loginFrm_UserName' name='UserName' type='text' class='form-control' placeholder='用户名' value='admin'>
@@ -46,5 +46,14 @@
 			</form>
 		</section>
 		#parse('pagelet/IndexJs.html')
+		<script type='text/javascript'>
+		$('#btn_login').click(function(){
+			$('#loginFrm').olxForm('submit', [function(){
+			}, function (valiResu){
+			}, function (data){
+				if(data.success) location.href = '${virtualPath}manage/';
+			}]);
+		});
+		</script>
 	</body>
 </html>
