--- a/blog/views/manager/Login.html
+++ b/blog/views/manager/Login.html
@@ -35,7 +35,7 @@
 					<input id='loginFrm_UserName' name='UserName' type='text' class='form-control' placeholder='用户名' value='admin'>
 				</div>
 				<div class='form-group'>
-					<input id='loginFrm_UserPass' name='UserPass' type='password' class='form-control' placeholder='密码' value='111111'>
+					<input id='loginFrm_UserPass' name='UserPass' type='password' class='form-control' placeholder='密码' value=''>
 				</div>
 				<div class='checkbox'>
 					<label>
@@ -52,6 +52,7 @@
 			}, function (valiResu){
 			}, function (data){
 				if(data.success) location.href = '${virtualPath}manage/';
+				alert(data.msg[0]);
 			}]);
 		});
 		</script>
