--- a/blog/views/pagelet/Tags.vm.html
+++ b/blog/views/pagelet/Tags.vm.html
@@ -1,4 +1,4 @@
-#foreach($tag in $tags)<div class='panel panel-default'>
+#foreach($tag in $tags)#if(0 < ${tag.Articles.length})<div class='panel panel-default'>
 	<div class='panel-heading'>
 		<h4 class='panel-title'>
 			<a id='${tag.TagName}' href='#collapse${tag.TagName}' data-parent='#accordion' data-toggle='collapse'>${tag.TagName} (${tag.Articles.length}篇文章)</a>
@@ -13,4 +13,4 @@
 			</p>#end
 		</div>
 	</div>
-</div>#end
+</div>#end#end
