--- a/blog/views/manage/pagelet/Side.Nav.html
+++ b/blog/views/manage/pagelet/Side.Nav.html
@@ -20,6 +20,7 @@
 		<div id='collapseBlog' class='panel-collapse collapse in'>
 			<div class='panel-body'>
 				<p><a href='${virtualPath}manage/article/category/'>文章分类</a></p>
+				<p><a href='${virtualPath}manage/article/tag/'>文章标签</a></p>
 			</div>
 		</div>
 	</div>
