--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -37,6 +37,22 @@
 				</div>
 			</div>
 		</div>
+		<div class='modal fade' id='alertModal'>
+			<div class='modal-dialog'>
+				<div class='modal-content'>
+					<div class='modal-header'>
+						<button type='button' class='close' data-dismiss='modal' aria-hidden='true'>&times;</button>
+						<h4 class='modal-title'><b>提示</b></h4>
+					</div>
+					<div class='modal-body'>
+						<p>操作成功！</p>
+					</div>
+					<div class='modal-footer'>
+						<button type='button' class='btn btn-default' data-dismiss='modal'>关闭</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 		#parse('pagelet/IndexFooter.html')
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
@@ -44,15 +60,15 @@
 		<script type='text/javascript'>
 			function showVali(valiResu){ }
 
-			function subFrm(){
+			$('#blogFrm_btn_sub').click(function(){
 				$('#blogFrm').olxForm('submit', [function(){
 				}, function (valiResu){
 					showVali(valiResu);
 				}, function (data){
 					if(!data.success) return showVali(data.msg);
+					$('#alertModal').modal();
 				}]);
-			}
-			$('#blogFrm_btn_sub').click(subFrm);
+			});
 		</script>
 		#parse('pagelet/LastJs.html')
 	</body>
