--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -51,6 +51,12 @@
 
 	.content {
 		.md-preview;
+		ol,ul {
+			padding-left: 20px;
+		}
+		a {
+			color: #d9534f;
+		}
 	}
 
 	.copyright, .page {
