--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -15,19 +15,19 @@
 							<ol class='breadcrumb'>
 								<li>
 									<i class='fa fa-home fa-fw'></i>
-									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'><a href='${virtualPath}archive/'>档案馆</a></li>
+									<a href='/index.html'>首页</a></li>
+								<li class='active'><a href='/archive/'>档案馆</a></li>
 							</ol>
 							#include('pagelet/html/archives.html')
 							<div>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/twitter.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/twitter.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/qqwb.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/qqwb.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/sinawb.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/sinawb.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/baidu.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/baidu.png'></a>
 							</div>
 						</div>
 					</div>
