--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -25,13 +25,13 @@
 							</div>
 							<div>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/twitter.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/twitter.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/qqwb.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/qqwb.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/sinawb.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/sinawb.png'></a>
 								<a href='javascript:;'>
-									<img src='${virtualPath}public/assets/images/share/16x16/baidu.png'></a>
+									<img src='$!{conf.static_res.virtualPath}assets/images/share/16x16/baidu.png'></a>
 							</div>
 						</div>
 					</div>
