--- a/blog/views/user/Register.html
+++ b/blog/views/user/Register.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/register.css?v1' media='screen'>
+		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/user/css/register.css?v1' media='screen'>
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
