--- a/blog/views/Tag.html
+++ b/blog/views/Tag.html
@@ -2,8 +2,8 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/artintro.css?v3' media='screen' />
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/loadmore.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/site/css/artintro.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/site/css/loadmore.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
