--- a/blog/views/pagelet/LoadMore.html
+++ b/blog/views/pagelet/LoadMore.html
@@ -1,5 +1,5 @@
 <div class='col-sm-12 col-md-8'>
-	<a id='loadMore' href='javascript:;' data-current-page='1' class='btn btn-block' data-url='${virtualPath}${loadMore}/more'>
+	<a id='loadMore' href='javascript:;' data-current-page='1' class='btn btn-block' data-url='/$!{loadMore}/more'>
 		<i class='fa fa-spin'></i>
 		<span>加载更多...</span></a>
 </div>
