--- a/blog/views/pagelet/TopBanner.html
+++ b/blog/views/pagelet/TopBanner.html
@@ -38,20 +38,20 @@
 		<div id='navbar-collapse' class='collapse navbar-collapse'>
 			<ul class='nav navbar-nav'>
 				<li${indexActiveClass}>
-					<a href='${virtualPath}index.html'>首页</a></li>
+					<a href='/index.html'>首页</a></li>
 				<li class='dropdown${categoryActiveClass}'>
 					<a href='javascript:;' class='dropdown-toggle' data-toggle='dropdown'>分类 <b class='caret'></b></a>
 					<ul class='dropdown-menu'>
 						#include('pagelet/html/topNavCategory.html')</ul>
 				</li>
-				<li${tagActiveClass}><a href='${virtualPath}archive/tag/'>标签</a></li>
+				<li${tagActiveClass}><a href='/archive/tag/'>标签</a></li>
 				<li><a href='javascript:;'>留言</a></li>
 				<li><a href='javascript:;'>画廊</a></li>
-				<li${archivesActiveClass}><a href='${virtualPath}archive/'>档案馆</a></li>
+				<li${archivesActiveClass}><a href='/archive/'>档案馆</a></li>
 			</ul>
 			<ul class='nav navbar-nav navbar-right'>
 				<li><a href='javascript:;'>关于</a></li>
-				<li class='active'><a href='${virtualPath}user/login'>登陆</a></li>
+				<li class='active'><a href='/user/login'>登陆</a></li>
 			</ul>
 			<form id='topSearchFrm' class='navbar-form navbar-right' role='search' data-olx-type='olx.form' onsubmit='return false;'>
 				<div class='form-group'><input class='form-control' type='text' placeholder='搜索'></div>
