--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/user/css/my.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/user/css/my.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
@@ -34,7 +34,7 @@
 								<td>$i#set($i=$i+1)</td>
 								<td>
 									<a title='创建于 #formatDate($article.PostTime)'
-										href='${virtualPath}archive/${article._id}.html'>${article.Title}</a></td>
+										href='/archive/${article._id}.html'>${article.Title}</a></td>
 								<td>
 									<div class='dropdown'>
 										<a id='drop${article._id}' href='javascript:;'
