--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -1,6 +1,6 @@
-<link rel='stylesheet' type='text/css' href='${cdn}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' media='screen' />
-<link rel='stylesheet' type='text/css' href='${cdn}bootstrap-markdown/2.5.0/css/bootstrap-markdown.min.css?v3.0.3' media='screen' />
-<link rel='stylesheet' type='text/css' href='${virtualPath}public/site/css/article.css?v3' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bootstrap-markdown/2.5.0/css/bootstrap-markdown.min.css?v3.0.3' media='screen' />
+<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/site/css/article.css?v3' media='screen' />
 <form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'>博客标题</label>
@@ -88,11 +88,11 @@
 	font-size: 12px;
 }
 </style>
-<script type='text/javascript' src='${cdn}bootstrap-markdown/2.5.0/js/bootstrap-markdown.js?v3.0.3'></script>
+<script type='text/javascript' src='$!{conf.cdn.url}bootstrap-markdown/2.5.0/js/bootstrap-markdown.js?v3.0.3'></script>
 #*<!-- 配置文件 -->
-<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.config.js'></script>
+<script type='text/javascript' src='$!{conf.cdn.url}ueditor/1.4.3/ueditor.config.js'></script>
 <!-- 编辑器源码文件 -->
-<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>*#
+<script type='text/javascript' src='$!{conf.cdn.url}ueditor/1.4.3/ueditor.all.js'></script>*#
 <!-- 实例化编辑器 -->
 <script type='text/javascript'>
 $(function(){
