--- a/blog/views/manager/ChangePwd.html
+++ b/blog/views/manager/ChangePwd.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='${virtualPath}public/manage/css/index.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/manage/css/index.css?v3' media='screen' />
 	</head>
 	<body>
 		#parse('manage/pagelet/TopBanner.html')
