--- a/blog/views/pagelet/Side.Comment.vm.html
+++ b/blog/views/pagelet/Side.Comment.vm.html
@@ -4,21 +4,21 @@
 	</div>
 	<div class='panel-body'>
 		<ul class='list-group'>
-			#foreach($comment in $comments)<li class='list-group-item clearfix'>
+			#foreach($doc in $!{data.usefulLinks})<li class='list-group-item clearfix'>
 				<div class='comment-left'>
 					<div>
-						<img src='${virtualPath}public/assets/images/face/48x48/08_avatar_small.jpg?0'>
+						<img src='/public/assets/images/face/48x48/08_avatar_small.jpg?0'>
 					</div>
 				</div>
 				<div class='comment-right'>
 					<div class='content'>
-						<a href='${virtualPath}archive/${comment.Article_Id}.html#comment' title='发布于 #formatDate($comment.PostTime)'>
-							<div>$comment.Content</div>
+						<a href='/archive/$!{doc.Article_Id}.html#comment' title='发布于 #formatDate($!{doc.PostTime})'>
+							<div>$!{doc.Content}</div>
 						</a>
 					</div>
 					<div class='opt'>
-						<span><a href='http://duoshuo.com/profile/$comment.Author_Id/' target='_blank'>$comment.Author</a></span>
-						<span>发布于 #toSDate($comment.PostTime)</span>
+						<span><a href='http://duoshuo.com/profile/$!{doc.Author_Id}/' target='_blank'>$!{doc.Author}</a></span>
+						<span>发布于 #toSDate($!{doc.PostTime})</span>
 					</div>
 				</div>
 			</li>#end
