--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -34,7 +34,7 @@
 				</div>
 				<div class='col-sm-12 col-md-4'>
 					#parse('pagelet/Side.Art.View.vm.html')
-					#include('pagelet/html/side.comment.top10.html')
+					#parse('pagelet/Side.Comment.vm.html')
 					#parse('pagelet/UsefulLinks.vm.html')
 					#parse('pagelet/qrCode.html')
 				</div>
