--- a/blog/views/pagelet/Side.Comment.vm.html
+++ b/blog/views/pagelet/Side.Comment.vm.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class='panel-body'>
 		<ul class='list-group'>
-			#foreach($doc in $!{data.usefulLinks})<li class='list-group-item clearfix'>
+			#foreach($doc in $!{data.newCommentTop5})<li class='list-group-item clearfix'>
 				<div class='comment-left'>
 					<div>
 						<img src='/public/assets/images/face/48x48/08_avatar_small.jpg?0'>
