--- a/blog/views/front/Index.html
+++ b/blog/views/front/Index.html
@@ -12,7 +12,7 @@
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
 					#parse('front/pagelet/Side.TopMessage.html')
-					#parse('front/pagelet/Side.TopmarksTopN.vm.html')
+					#parse('front/pagelet/Side.TopMarksTopN.vm.html')
 					#parse('front/pagelet/Side.ArticleIntros.vm.html')
 				</div>
 				<div class='col-sm-12 col-md-4'>
