--- a/blog/views/front/Index.html
+++ b/blog/views/front/Index.html
@@ -12,13 +12,13 @@
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
 					#parse('front/pagelet/Side.TopMessage.html')
-					#parse('front/pagelet/Side.TopMarksTopN.vm.html')
+					#parse('front/pagelet/Side.TopBookmarkTopN.vm.html')
 					#parse('front/pagelet/Side.ArticleIntros.vm.html')
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('front/pagelet/Side.HotArticlesTopN.vm.html')
-					#parse('front/pagelet/Side.NewCommentsTopN.vm.html')
-					#parse('front/pagelet/Side.UsefulLinks.vm.html')
+					#parse('front/pagelet/Side.HotArticleTopN.vm.html')
+					#parse('front/pagelet/Side.NewCommentTopN.vm.html')
+					#parse('front/pagelet/Side.UsefulLink.vm.html')
 					#parse('front/pagelet/Side.QrCode.html')
 				</div>
 				#parse('front/pagelet/Side.LoadMore.html')
