--- a/blog/views/front/pagelet/Side.NewCommentTopN.vm.html
+++ b/blog/views/front/pagelet/Side.NewCommentTopN.vm.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class='panel-body'>
 		<ul class='list-group'>
-			#foreach($doc in $!{data.newCommentsTopN})<li class='list-group-item clearfix'>
+			#foreach($doc in $!{data.newCommentTopN})<li class='list-group-item clearfix'>
 				<div class='comment-left'>
 					<div>
 						<img style='width:48px;height:48px' src='http://app.qlogo.cn/mbloghead/218f8e14426c8fbb3340/50'>
