--- a/blog/views/front/pagelet/Side.TopBookmarkTopN.vm.html
+++ b/blog/views/front/pagelet/Side.TopBookmarkTopN.vm.html
@@ -1,6 +1,6 @@
 <section class='flexslider'>
 	<ul class='slides'>
-		#foreach($article in $!{data.topMarksTopN})<li>
+		#foreach($article in $!{data.bookmarkTopN})<li>
 			<a href='/archive/$!{article._id}.html'>
 				<img src='/public/udata/foreworld/$!{article.Photo}'
 					title='$!{article.Title}' alt='$!{article.Title}' /></a>
