--- a/blog/views/front/pagelet/Side.QrCode.html
+++ b/blog/views/front/pagelet/Side.QrCode.html
@@ -1,5 +1,5 @@
 <div id='qrCode'>
-	<figure><img src='$!{conf.static_res.virtualPath}assets/images/foreworld.png' alt='二维码' title='洪荒世界'></figure>
+	<figure><img src='$!{conf.html.static_res}assets/images/foreworld.png' alt='二维码' title='洪荒世界'></figure>
 </div>
 <script type='text/javascript'>
 $(function(){
