--- a/blog/views/front/pagelet/Common.IndexHeader.html
+++ b/blog/views/front/pagelet/Common.IndexHeader.html
@@ -8,18 +8,18 @@
 <meta name='generator' content='Foreworld' />
 <meta http-equiv='content-type' content='text/html;charset=utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-<link rel='shortcut icon' href='$!{conf.static_res.virtualPath}assets/images/favicon.png?v1' />
+<link rel='shortcut icon' href='$!{conf.html.static_res}assets/images/favicon.png?v1' />
 <!--[if lte IE 9]>
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bsie/0.0.0/css/bootstrap-ie6.css' />
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bsie/0.0.0/css/ie.css' />
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}verybsie/1.0.0/css/bootstrap-verybsie.css' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/ie.css' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
 <![endif]-->
 <!--[if lte IE 7]>
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}verybsie/1.0.0/css/bootstrap-verybsie.css' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
 <![endif]-->
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bootstrap/3.2.0/dist/css/bootstrap.min.css?v3.2.0' media='screen' />
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}bootstrap/3.2.0/dist/css/bootstrap-theme.min.css?v3.2.0' media='screen' />
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}flexslider/2.2.2/flexslider.css' media='screen' />
-<link rel='stylesheet' type='text/css' href='$!{conf.cdn.url}font-awesome/4.1.0/css/font-awesome.min.css' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bootstrap/3.2.0/dist/css/bootstrap.min.css?v3.2.0' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bootstrap/3.2.0/dist/css/bootstrap-theme.min.css?v3.2.0' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}flexslider/2.2.2/flexslider.css' media='screen' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}font-awesome/4.1.0/css/font-awesome.min.css' media='screen' />
 <link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/assets/css/olx/olx.css?v3' media='screen' />
-<script type='text/javascript' src='$!{conf.cdn.url}jquery/2.0.2/jquery.min.js?v2.0.2'></script>
+<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js?v2.0.2'></script>
