--- a/blog/views/front/pagelet/Side.NewCommentTopN.vm.html
+++ b/blog/views/front/pagelet/Side.NewCommentTopN.vm.html
@@ -7,7 +7,7 @@
 			#foreach($doc in $!{data.newCommentTopN})<li class='list-group-item clearfix'>
 				<div class='comment-left'>
 					<div>
-						<img style='width:48px;height:48px' src='http://app.qlogo.cn/mbloghead/218f8e14426c8fbb3340/50'>
+						<img style='width:48px;height:48px' src='$!{doc.Avatar_Url}'>
 					</div>
 				</div>
 				<div class='comment-right'>
