--- a/blog/views/back/pagelet/Sidebar.html
+++ b/blog/views/back/pagelet/Sidebar.html
@@ -93,7 +93,7 @@
 							</a>
 						</div>
 						<div class='opt'>
-							<span><a href='http://duoshuo.com/profile/$!{comment.Author_Id}/'>$!{comment.Author}</a></span>
+							<span><a target='_blank' href='http://duoshuo.com/profile/$!{comment.Author_Id}/'>$!{comment.Author}</a></span>
 							<span>发布于 #toSDate($!{comment.PostTime})</span>
 						</div>
 					</div>
