--- a/blog/views/back/pagelet/Sidebar2.html
+++ b/blog/views/back/pagelet/Sidebar2.html
@@ -5,9 +5,9 @@
 		</div>
 		<div class='panel-body'>
 			<ul class='list-group'>
-				#foreach($link in $links)<li class='list-group-item'>
-					<a target='_blank'  title='创建于 #formatDate($link.PostTime)' href='$link.LinkUrl'>
-						<div>$link.LinkName</div></a>
+				#foreach($link in $!{data.usefulLink})<li class='list-group-item'>
+					<a target='_blank'  title='创建于 #formatDate($!{link.PostTime})' href='$!{link.LinkUrl}'>
+						<div>$!{link.LinkName}</div></a>
 				</li>#end
 			</ul>
 		</div>
